--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <title>The Avengers (2012 film) - Wikipedia</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="navbar">
+        <div class="button"><i class="fa-solid fa-bars"></i></div>
+        <div class="logo">
+            <img id="main" src="./assets/wikipedia.png" alt="" srcset="">
+            <div class="logo-text">
+                <img src="./assets/wikipedia-wordmark-en.svg" alt="">
+                <img src="./assets/wikipedia-tagline-en.svg" alt="">
+            </div>
+        </div>
+
+        <div class="searchbox">
+            <form action="#">
+                <input type="text" placeholder="Search Wikipedia">
+                <button type="submit">Search</button>
+            </form>
+        </div>
+        <div class="end-buttons">
+            <a href="">Create account</a>
+            <a href="#">Login</a>
+            <i class="fa-solid fa-ellipsis"></i>
+        </div>
+    </div>
+    <div class="sidebar"></div>
+    <div class="main-content"></div>
 </body>
+
 </html>
